# scadulous

./: .gitmodules  install.sh  main.py  requirements.txt
qiewer/: CMakeLists.txt
qiewer/src/: app.cpp  app.h  canvas.cpp  canvas.h  glmesh.h  loader.cpp  vertex.h
viewers/: send.py
viewers/giewer/: CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferPool.cpp  CommandBufferPool.h  CommandPool.cpp  CommandPool.h  CommandQueues.cpp  CommandQueues.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  Metrics.cpp  Metrics.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderContext.cpp  RenderContext.h  ResourceBuffer.cpp  ResourceBuffer.h  ShaderModule.cpp  ShaderModule.h  SocketServer.cpp  SocketServer.h  State.cpp  (+6 more)
viewers/giewer/glfw-3.3.2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
viewers/giewer/glfw-3.3.2/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
viewers/giewer/glfw-3.3.2/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
viewers/giewer/glfw-3.3.2/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  (+3 more)
viewers/giewer/shaders/: shader.debug.frag  shader.debug.geom  shader.debug.vert  shader.geom  shader.vert  shader.vert.spv
viewers/qiewer/: CMakeLists.txt
viewers/qiewer/src/: App.cpp  App.h  Camera.cpp  Camera.h  GLMesh.h  Loader.cpp  Loader.h  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  OpenGLWindow.cpp  OpenGLWindow.h  SocketServer.h  Vertex.h  canvas.cpp  glmesh.cpp  loader.h  main.cpp  send.py  window.cpp  window.h
viewers/test_files/: square.stl  teapot.stl  unit_cube.stl
